# MHMC

./: MHMC.cabal  README.md  mhmc.cabal
src/: MHMC.hs  MHMCEvent.hs  Main.hs
src/MHMC/: Clock.hs  Display.hs  Error.hs  Event.hs  MPD.hs  RWS.hs
src/MHMC/Display/: Browse.hs  Clock.hs  Help.hs  Playlist.hs
