Name:           mhmc
Version:        0.0.1
Synopsis:       Minimalist Haskell MPD Client
Description:    VTY-based MPD client coded entirely in Haskell
Category:       Sound

License:        MIT
License-file:   LICENSE
Author:         Wes Caldwell

Maintainer:     Wes Caldwell <wcaldwell.email@gmail.com>
Stability:      Pre-alpha
Homepage:       https://github.com/killmous/MHMC
Bug-reports:    https://github.com/killmous/MHMC/issues

Build-Type:     Simple
Cabal-Version:  >= 1.10

Extra-Source-Files:
    README.md

Source-Repository head
    type:       git
    location:   https://github.com/killmous/MHMC

executable mhmc
    Default-Language:   Haskell2010
    Hs-Source-Dirs:     src

    main-is:            Main.hs

    ghc-options:        -O2 -threaded
    ghc-prof-options:   -O2 -threaded
    Build-Depends:
        base >= 4
      , containers >= 0.5.0.0
      , data-default >= 0.5.3
      , string-qq >= 0.0.2
      , old-time >= 1.1.0.1
      , libmpd >= 0.9.0
      , vty >= 5.0.0